--- a/n113 & 114 - Data Wrangling/n114a-Data Wrangling(2).ipynb
+++ b/n113 & 114 - Data Wrangling/n114a-Data Wrangling(2).ipynb
@@ -62,7 +62,7 @@
     {
       "cell_type": "code",
       "source": [
-        "# 이 곳에 답안을 작성하세요. "
+        "# 이 곳에 답안을 작성하시기 바랍니다."
       ],
       "metadata": {
         "id": "gIYt_ClByZbY"
@@ -86,7 +86,7 @@
     {
       "cell_type": "code",
       "source": [
-        "# 이 곳에 답안을 작성하세요. "
+        "# 이 곳에 답안을 작성하시기 바랍니다."
       ],
       "metadata": {
         "id": "Hnm297EYyd9u"
@@ -111,7 +111,7 @@
     {
       "cell_type": "code",
       "source": [
-        "# 이 곳에 답안을 작성하세요. "
+        "# 이 곳에 답안을 작성하시기 바랍니다."
       ],
       "metadata": {
         "id": "II42XZwsyfvG"
@@ -136,10 +136,113 @@
     {
       "cell_type": "code",
       "source": [
-        "# 이 곳에 답안을 작성하세요. "
+        "# 이 곳에 답안을 작성하시기 바랍니다."
       ],
       "metadata": {
         "id": "wi4j5tLGyhZl"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "# 🔥 도전 과제\n",
+        "\n",
+        "**n113a의 도전과제에서 이어집니다.**"
+      ],
+      "metadata": {
+        "id": "HP_pf2XHbF5_"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "## Tidy Data\n",
+        "\n",
+        "- n113a의 도전과제에서 만든 데이터를 다음 예시와 같은 **tidy** 형태로 만드세요.\n",
+        "\n",
+        "|종목명|Feature|Value|\n",
+        "|:-:|:-:|:-:|\n",
+        "|하이트진로|매출액|6243|\n",
+        "|보해양조|매출액|205|\n",
+        "|롯데칠성|매출액|5980|\n",
+        "|...|...|...|\n",
+        "|마니커|EPS(원)|-61|\n",
+        "|이지홀딩스|EPS(원)|1168|\n",
+        "|하림|EPS(원)|62|\n",
+        "\n",
+        "- 다음 코드를 실행했을 때 나오는 box 수를 구하세요. \n",
+        "```python\n",
+        "sns.boxplot(data = df_tidy, x = '종목명', y = 'value');\n",
+        "```"
+      ],
+      "metadata": {
+        "id": "h1tOBIcSbfGA"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# 이 곳에 답안을 작성하시기 바랍니다. "
+      ],
+      "metadata": {
+        "id": "UnBv92ZEcKY9"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "## Join\n",
+        "\n",
+        "- 여러 데이터셋을 합칠 때에는 `.concat()`이나 `.merge()` 외에 `.join()`이라는 함수를 사용할 수도 있습니다. 공식문서를 통해 `.join()`에 대해 알아보세요.\n",
+        "\n",
+        "  https://pandas.pydata.org/docs/reference/api/pandas.DataFrame.join.html\n",
+        "\n",
+        "-  주어진 두 데이터프레임을 `.join()`을 사용하여 다음과 같은 결과물을 만듭니다.\n",
+        "\n",
+        "\n",
+        "|key1|key2x|A|B|key2y|C|D|\n",
+        "|:-:|:-:|:-:|:-:|:-:|:-:|:-:|\n",
+        "|K1|K0|A2|B2|K0|C0|D0|\n",
+        "|K1|K0|A2|B2|K0|C1|D1|\n",
+        "|K2|K1|A3|B3|K0|C2|D2|\n",
+        "|K3|NaN|NaN|NaN|K0|C3|D3|"
+      ],
+      "metadata": {
+        "id": "J3GBGj-NcCbJ"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "import pandas as pd\n",
+        "\n",
+        "left = pd.DataFrame({'key1': ['K0', 'K0', 'K1', 'K2'],\n",
+        "                     'key2': ['K0', 'K1', 'K0', 'K1'],\n",
+        "                     'A': ['A0', 'A1', 'A2', 'A3'],\n",
+        "                     'B': ['B0', 'B1', 'B2', 'B3']})\n",
+        "\n",
+        "right = pd.DataFrame({'key1': ['K1', 'K1', 'K2', 'K3'],\n",
+        "                      'key2': ['K0', 'K0', 'K0', 'K0'],\n",
+        "                      'C': ['C0', 'C1', 'C2', 'C3'],\n",
+        "                      'D': ['D0', 'D1', 'D2', 'D3']})"
+      ],
+      "metadata": {
+        "id": "RlBnXh21SjHt"
+      },
+      "execution_count": 11,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# 이 곳에 답안을 작성하시기 바랍니다. "
+      ],
+      "metadata": {
+        "id": "qO2qf5bodA0Y"
       },
       "execution_count": null,
       "outputs": []
