update n123a - Hypothesis Test.ipynb

--- a/n123-Hypothesis-Test/n123a - Hypothesis Test.ipynb
+++ b/n123-Hypothesis-Test/n123a - Hypothesis Test.ipynb
@@ -34,7 +34,7 @@
     {
       "cell_type": "code",
       "source": [
-        "# 아래의 코드를 실행해 주세요. 업그레이드 완료 후에는 런타임을 재시작해야 합니다. \n",
+        "# 아래의 코드를 실행해 주세요. \n",
         "!pip install scipy --upgrade"
       ],
       "metadata": {
@@ -44,7 +44,7 @@
         "id": "nxI0EC-X2fXp",
         "outputId": "e98498db-f4a9-4428-be94-aa48a592d587"
       },
-      "execution_count": 1,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -83,7 +83,7 @@
         "id": "2QLRviTlNmR7",
         "outputId": "54cc574a-34df-443b-98dc-d707973e3f6c"
       },
-      "execution_count": 2,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -190,22 +190,22 @@
         "  \n",
         "    : 모집단에서 무작위로 추출하는 방식입니다.\n",
         "\n",
-        "    <img src = 'https://camo.githubusercontent.com/18ddbf3ce8465d56387df27f8f28663ac5230626dfe4a80ab453d49579dd3659/68747470733a2f2f692e696d6775722e636f6d2f367279793452462e706e67' width=150>\n",
+        "    <img src = 'https://i.imgur.com/VveWJJf.png' width=150>\n",
         "  - Systematic Sampling\n",
         "\n",
         "    : 모집단에서 규칙을 가지고 추출하는 방식입니다. ex) 1, 6, 11, 16, ... 번째의 데이터 선택 \n",
         "\n",
-        "    <img src = 'https://camo.githubusercontent.com/9489fda217b9d4109c6d0b01c7caae00fc7a30598c6c5800068f9c36530f34d7/68747470733a2f2f692e696d6775722e636f6d2f4b6174673365532e706e67' width=150> \n",
+        "    <img src = 'https://i.imgur.com/u5otXyy.png' width=150> \n",
         "  - Stratified Random Sampling\n",
         "\n",
         "    : 모집단을 여러 그룹으로 나누고, 각 그룹에서 무작위로 추출하는 방식입니다. ex) 여론 조사에서 나이대별로 무작위 추출 \n",
         "\n",
-        "    <img src = 'https://camo.githubusercontent.com/4dd0ecfcf8b9a03a92ecfe860ed4fa592b971ddb3e619dca92dba40255f0bc41/68747470733a2f2f692e696d6775722e636f6d2f47306e3736484c2e706e67' width=150>\n",
+        "    <img src = 'https://i.imgur.com/3KPzuDx.png' width=150>\n",
         "  - Cluster Sampling\n",
         "\n",
         "    : 모집단을 여러 그룹으로 나누고, 특정 그룹을 무작위로 선택하는 방식입니다. \n",
         "\n",
-        "    <img src = 'https://camo.githubusercontent.com/1d7782573cb94c3d611b1011b34b9a85590eb7cb5c8210e16cf16c14acd85d86/68747470733a2f2f692e696d6775722e636f6d2f7a4e386a586f772e706e67' width=150>\n",
+        "    <img src = 'https://i.imgur.com/m9eJ3nN.png' width=150>\n",
         "\n",
         "- 모집단은 1부터 100까지 담은 numpy array이며, Sampling 하는 데이터 수는 20개입니다.\n",
         "\n",
