update n123a - Hypothesis Test.ipynb

--- a/n123-Hypothesis-Test/n123a - Hypothesis Test.ipynb
+++ b/n123-Hypothesis-Test/n123a - Hypothesis Test.ipynb
@@ -174,7 +174,30 @@
     {
       "cell_type": "markdown",
       "source": [
-        "# 🔥 도전과제"
+        "# 🔥 도전과제\n",
+        "\n",
+        "**다음은 대표적인 4가지 sampling 방식을 설명한 것입니다.**\n",
+        "\n",
+        "- Simple Random Sampling\n",
+        "  \n",
+        "    : 모집단에서 무작위로 추출하는 방식입니다.\n",
+        "\n",
+        "    <img src = 'https://i.imgur.com/VveWJJf.png' width=150>\n",
+        "- Systematic Sampling\n",
+        "\n",
+        "    : 모집단에서 규칙을 가지고 추출하는 방식입니다. ex) 1, 6, 11, 16, ... 번째의 데이터 선택 \n",
+        "\n",
+        "    <img src = 'https://i.imgur.com/u5otXyy.png' width=150> \n",
+        "- Stratified Random Sampling\n",
+        "\n",
+        "    : 모집단을 여러 그룹으로 나누고, 각 그룹에서 무작위로 추출하는 방식입니다. ex) 여론 조사에서 나이대별로 무작위 추출 \n",
+        "\n",
+        "    <img src = 'https://i.imgur.com/3KPzuDx.png' width=150>\n",
+        "- Cluster Sampling\n",
+        "\n",
+        "    : 모집단을 여러 그룹으로 나누고, 특정 그룹을 무작위로 선택하는 방식입니다. \n",
+        "\n",
+        "    <img src = 'https://i.imgur.com/m9eJ3nN.png' width=150>"
       ],
       "metadata": {
         "id": "O0uBOhE-tej3"
@@ -185,33 +208,13 @@
       "source": [
         "## Sampling\n",
         "\n",
-        "- 다음 4가지 sampling 방식을 구현해 봅니다.\n",
-        "  - Simple Random Sampling\n",
-        "  \n",
-        "    : 모집단에서 무작위로 추출하는 방식입니다.\n",
+        "- 위의 4가지 sampling 방식을 구현해 봅니다.\n",
         "\n",
-        "    <img src = 'https://i.imgur.com/VveWJJf.png' width=150>\n",
-        "  - Systematic Sampling\n",
+        "  - 모집단은 1부터 100까지 담은 numpy array이며, Sampling 하는 데이터 수는 20개입니다.\n",
         "\n",
-        "    : 모집단에서 규칙을 가지고 추출하는 방식입니다. ex) 1, 6, 11, 16, ... 번째의 데이터 선택 \n",
+        "  - Stratified Random Sampling을 위한 그룹을 나누는 기준은 1-10, 11-20, ... 과 같은 방식입니다.\n",
         "\n",
-        "    <img src = 'https://i.imgur.com/u5otXyy.png' width=150> \n",
-        "  - Stratified Random Sampling\n",
-        "\n",
-        "    : 모집단을 여러 그룹으로 나누고, 각 그룹에서 무작위로 추출하는 방식입니다. ex) 여론 조사에서 나이대별로 무작위 추출 \n",
-        "\n",
-        "    <img src = 'https://i.imgur.com/3KPzuDx.png' width=150>\n",
-        "  - Cluster Sampling\n",
-        "\n",
-        "    : 모집단을 여러 그룹으로 나누고, 특정 그룹을 무작위로 선택하는 방식입니다. \n",
-        "\n",
-        "    <img src = 'https://i.imgur.com/m9eJ3nN.png' width=150>\n",
-        "\n",
-        "- 모집단은 1부터 100까지 담은 numpy array이며, Sampling 하는 데이터 수는 20개입니다.\n",
-        "\n",
-        "- Stratified Random Sampling을 위한 그룹을 나누는 기준은 1-10, 11-20, ... 과 같은 방식입니다.\n",
-        "\n",
-        "- Cluster Sampling에서 그룹을 나누는 기준은 5로 나눴을 때의 나머지 값입니다. (0,1,2,3,4)"
+        "  - Cluster Sampling에서 그룹을 나누는 기준은 5로 나눴을 때의 나머지 값입니다. (0,1,2,3,4)"
       ],
       "metadata": {
         "id": "BMjbHDYiRPBY"
