--- a/n214-logistic-regression/n214a-logistic-regression.ipynb
+++ b/n214-logistic-regression/n214a-logistic-regression.ipynb
@@ -84,8 +84,7 @@
     "- 우리가 예측하고자 하는 column은 `cardio`(Presence or absence of cardiovascular disease)입니다.\n",
     "- 모델을 만들기 전에 기준모델을 설정합니다.\n",
     "- 하이퍼파라미터 max_iter=1000을 사용합니다.\n",
-    "- **(Urclass Quiz) LogisticRegression 모델을 학습하고 검증세트 정확도를 제출하세요.**\n",
-    "  - LogisticRegression 모델은 normalization이 반드시 적용되어야 함에 유의하세요(왜 그럴까요?).\n"
+    "- **(Urclass Quiz) LogisticRegression 모델을 학습하고 검증세트 정확도를 제출하세요.**"
    ]
   },
   {
