--- a/n223-evaluation-metrics-for-classification/n223-evaluation-metrics-for-classification.ipynb
+++ b/n223-evaluation-metrics-for-classification/n223-evaluation-metrics-for-classification.ipynb
@@ -271,7 +271,7 @@
     "fig, ax = plt.subplots()\n",
     "pcm = plot_confusion_matrix(pipe, X_val, y_val,\n",
     "                            cmap=plt.cm.Blues,\n",
-    "                            ax=ax);\n",
+    "                            ax=ax)\n",
     "plt.title(f'Confusion matrix, n = {len(y_val)}', fontsize=15)\n",
     "plt.show()"
    ]
@@ -580,7 +580,7 @@
     "fig, ax = plt.subplots()\n",
     "pcm = plot_confusion_matrix(pipe, X_val, y_val,\n",
     "                            cmap=plt.cm.Blues,\n",
-    "                            ax=ax);\n",
+    "                            ax=ax)\n",
     "plt.title(f'Confusion matrix, n = {len(y_val)}', fontsize=15)\n",
     "plt.show()"
    ]
@@ -1128,7 +1128,7 @@
    ],
    "source": [
     "import seaborn as sns\n",
-    "sns.displot(y_pred_proba);"
+    "sns.displot(y_pred_proba)"
    ]
   },
   {
@@ -1189,9 +1189,9 @@
    "metadata": {},
    "source": [
     "#### 임계값를 바꾸어 가며 정밀도, 재현율의 변화를 관찰해 보세요.\n",
-    "임계값을 낮추어 백신을 접종하지 않을 확률이 높은 사람들을 더 정확하게 구하는 것이 도움이 될 것 같습니다.\n",
+    "임계값을 낮추면 백신을 접종할 확률이 굉장히 낮은 사람들에 대해서만 0으로 분류하게 됩니다.\n",
     "\n",
-    "임계값을 낮추면 정밀도는 올라가지만 재현율은 떨어질 것입니다."
+    "임계값을 낮추면 백신을 접종하지 않은 사람들에 대한 정밀도는 올라가지만 재현율은 떨어질 것입니다."
    ]
   },
   {
@@ -1230,7 +1230,7 @@
     "interact(explore_threshold, \n",
     "    y_true=fixed(y_val), \n",
     "    y_pred_proba=fixed(y_pred_proba), \n",
-    "    threshold=(0, 1, 0.01));"
+    "    threshold=(0, 1, 0.01))"
    ]
   },
   {
