--- a/Part1.ipynb
+++ b/Part1.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "5a8112fb",
+   "id": "f8ae618b",
    "metadata": {},
    "source": [
     "# 확인하세요!\n",
@@ -28,7 +28,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "3dad3a97",
+   "id": "506d1259",
    "metadata": {},
    "source": [
     "---"
@@ -66,7 +66,7 @@
     "editable": false,
     "nbgrader": {
      "cell_type": "code",
-     "checksum": "9c4bda5e63a2a2a6dea653091b8f8f6f",
+     "checksum": "39037fc45d3049dedd50ae4f0e6a35a7",
      "grade": false,
      "grade_id": "cell-ee764f0e965ac62a",
      "locked": true,
@@ -79,7 +79,8 @@
    "source": [
     "# # Google Colab에서 하시는 경우 해당 셀을 먼저 실행해주시기 바랍니다.\n",
     "import sys\n",
-    "if 'google.colab' in sys.modules:\n",
+    "\n",
+    "if \"google.colab\" in sys.modules:\n",
     "    !pip install category_encoders==2.*\n",
     "    !pip install pandas-profiling==2.*\n",
     "    !pip install plotly==4.*"
@@ -120,7 +121,7 @@
     "editable": false,
     "nbgrader": {
      "cell_type": "code",
-     "checksum": "75f205eb0ecb4f7228ee7e3765330e65",
+     "checksum": "46c1d6a3252b331253fa73052de7208e",
      "grade": false,
      "grade_id": "cell-a6344537ef769b2b",
      "locked": true,
@@ -134,17 +135,21 @@
     "# 분석에 필요한 라이브러리 및 데이터셋을 불러옵니다\n",
     "import pandas as pd\n",
     "\n",
-    "donors = pd.read_csv('https://archive.ics.uci.edu/ml/machine-learning-databases/blood-transfusion/transfusion.data')\n",
-    "assert donors.shape == (748,5)  # 데이터셋이 잘 로드 됐는지 확인하기 위해서 assert를 사용해 검증합니다.\n",
+    "donors = pd.read_csv(\n",
+    "    \"https://archive.ics.uci.edu/ml/machine-learning-databases/blood-transfusion/transfusion.data\"\n",
+    ")\n",
+    "assert donors.shape == (748, 5)  # 데이터셋이 잘 로드 됐는지 확인하기 위해서 assert를 사용해 검증합니다.\n",
     "\n",
     "# 칼럼의 이름을 이해하기 쉽도록 변경합니다.\n",
-    "donors = donors.rename(columns={\n",
-    "    'Recency (months)': 'months_since_last_donation', \n",
-    "    'Frequency (times)': 'number_of_donations', \n",
-    "    'Monetary (c.c. blood)': 'total_volume_donated', \n",
-    "    'Time (months)': 'months_since_first_donation', \n",
-    "    'whether he/she donated blood in March 2007': 'made_donation_in_march_2007'\n",
-    "})"
+    "donors = donors.rename(\n",
+    "    columns={\n",
+    "        \"Recency (months)\": \"months_since_last_donation\",\n",
+    "        \"Frequency (times)\": \"number_of_donations\",\n",
+    "        \"Monetary (c.c. blood)\": \"total_volume_donated\",\n",
+    "        \"Time (months)\": \"months_since_first_donation\",\n",
+    "        \"whether he/she donated blood in March 2007\": \"made_donation_in_march_2007\",\n",
+    "    }\n",
+    ")"
    ]
   },
   {
@@ -227,7 +232,7 @@
     "editable": false,
     "nbgrader": {
      "cell_type": "code",
-     "checksum": "3332bc0e2df66954ed3f3a1a48360716",
+     "checksum": "19fdfbc66adb517612e5770e35b3d70e",
      "grade": false,
      "grade_id": "cell-5df3c4315bcf9f69",
      "locked": true,
@@ -238,7 +243,7 @@
    },
    "outputs": [],
    "source": [
-    "donors['made_donation_in_march_2007'].value_counts(normalize=True)"
+    "donors[\"made_donation_in_march_2007\"].value_counts(normalize=True)"
    ]
   },
   {
@@ -273,7 +278,7 @@
     "deletable": false,
     "nbgrader": {
      "cell_type": "code",
-     "checksum": "5dffdaa54f542eb26070731d242329bf",
+     "checksum": "fbd666eef846b24d77cd15cc51e958fa",
      "grade": false,
      "grade_id": "1-1",
      "locked": false,
@@ -292,7 +297,7 @@
     "    \n",
     "    \n",
     "    # YOUR CODE ENDS HERE\n",
-    "    \n",
+    "\n",
     "    return X_train, X_test, y_train, y_test"
    ]
   },
@@ -349,7 +354,7 @@
     "deletable": false,
     "nbgrader": {
      "cell_type": "code",
-     "checksum": "9f5984e02224c4dc4a2cf9c50ec8504c",
+     "checksum": "2b0ae08951492fa39f507f9c91ed94ff",
      "grade": false,
      "grade_id": "1-2",
      "locked": false,
@@ -362,6 +367,7 @@
    "source": [
     "from sklearn.linear_model import LogisticRegression\n",
     "\n",
+    "\n",
     "def fit_logistic_regression(X_train, X_test, y_train, y_test):\n",
     "    logistic = LogisticRegression()\n",
     "    test_accuracy = 0\n",
@@ -370,7 +376,7 @@
     "    \n",
     "    \n",
     "    # YOUR CODE ENDS HERE\n",
-    "    \n",
+    "\n",
     "    return logistic, test_accuracy"
    ]
   },
@@ -448,7 +454,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "9730942a",
+   "id": "ce0fbcce",
    "metadata": {},
    "source": [
     "---"
@@ -456,7 +462,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "e04858a7",
+   "id": "308ea792",
    "metadata": {},
    "source": [
     "# 수고하셨습니다!"
