--- a/Part2.ipynb
+++ b/Part2.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "eb3a6b88",
+   "id": "b848ee6d",
    "metadata": {},
    "source": [
     "# 확인하세요!\n",
@@ -28,7 +28,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "5472e1de",
+   "id": "28d29a68",
    "metadata": {},
    "source": [
     "---"
@@ -66,7 +66,7 @@
     "editable": false,
     "nbgrader": {
      "cell_type": "code",
-     "checksum": "9c4bda5e63a2a2a6dea653091b8f8f6f",
+     "checksum": "39037fc45d3049dedd50ae4f0e6a35a7",
      "grade": false,
      "grade_id": "cell-ee764f0e965ac62a",
      "locked": true,
@@ -79,7 +79,8 @@
    "source": [
     "# # Google Colab에서 하시는 경우 해당 셀을 먼저 실행해주시기 바랍니다.\n",
     "import sys\n",
-    "if 'google.colab' in sys.modules:\n",
+    "\n",
+    "if \"google.colab\" in sys.modules:\n",
     "    !pip install category_encoders==2.*\n",
     "    !pip install pandas-profiling==2.*\n",
     "    !pip install plotly==4.*"
@@ -487,7 +488,7 @@
     "editable": false,
     "nbgrader": {
      "cell_type": "code",
-     "checksum": "4733d3fafc9e8514b39e82a2478f155f",
+     "checksum": "0903f39a07317e1d135b06cd622ea6c5",
      "grade": false,
      "grade_id": "cell-a6344537ef769b2b",
      "locked": true,
@@ -501,7 +502,9 @@
     "# 데이터셋을 불러옵니다\n",
     "import pandas as pd\n",
     "\n",
-    "homes = pd.read_csv('https://ds-lecture-data.s3.ap-northeast-2.amazonaws.com/ames_home/ames_home_subset.csv')\n",
+    "homes = pd.read_csv(\n",
+    "    \"https://ds-lecture-data.s3.ap-northeast-2.amazonaws.com/ames_home/ames_home_subset.csv\"\n",
+    ")\n",
     "assert homes.shape == (2904, 47)"
    ]
   },
@@ -605,7 +608,7 @@
     "deletable": false,
     "nbgrader": {
      "cell_type": "code",
-     "checksum": "86b58f6c209a85aff0b1221958605a07",
+     "checksum": "0c6e90ac1e2fab4cde282bfddc5ef44f",
      "grade": false,
      "grade_id": "2-1",
      "locked": false,
@@ -621,14 +624,14 @@
     "\n",
     "\n",
     "def calculate_baseline_score(homes):\n",
-    "    mae = float('inf')\n",
+    "    mae = float(\"inf\")\n",
     "    r2 = -1\n",
     "\n",
     "    # YOUR CODE HERE\n",
     "    \n",
     "    \n",
     "    # YOUR CODE ENDS HERE\n",
-    "    \n",
+    "\n",
     "    return mae, r2"
    ]
   },
@@ -692,7 +695,7 @@
     "deletable": false,
     "nbgrader": {
      "cell_type": "code",
-     "checksum": "0ccf0ab331c47b498c1b2a7c7939b53e",
+     "checksum": "ecb84995d642b9d71ea0e8dd4e27d863",
      "grade": false,
      "grade_id": "2-2",
      "locked": false,
@@ -712,7 +715,7 @@
     "    \n",
     "    \n",
     "    # YOUR CODE ENDS HERE\n",
-    "    \n",
+    "\n",
     "    return train, validation, test"
    ]
   },
@@ -896,7 +899,7 @@
     "deletable": false,
     "nbgrader": {
      "cell_type": "code",
-     "checksum": "7877ff8d872a105bdfe344504c296b5f",
+     "checksum": "08f333c81794b88878c0f6d5c03717c0",
      "grade": false,
      "grade_id": "2-4",
      "locked": false,
@@ -920,7 +923,7 @@
     "    \n",
     "    \n",
     "    # YOUR CODE ENDS HERE\n",
-    "    \n",
+    "\n",
     "    return encoder, X_train_encoded, X_val_encoded, X_test_encoded"
    ]
   },
@@ -933,7 +936,7 @@
     "editable": false,
     "nbgrader": {
      "cell_type": "code",
-     "checksum": "e149683057b8d1311b3c3c7009fd9c74",
+     "checksum": "502b5dfe4cdbfbfc267cbfe26d890168",
      "grade": true,
      "grade_id": "2-4_test",
      "locked": true,
@@ -945,7 +948,9 @@
    },
    "outputs": [],
    "source": [
-    "encoder, X_train_encoded, X_val_encoded, X_test_encoded = encoding_one_hot(X_train, X_val, X_test)"
+    "encoder, X_train_encoded, X_val_encoded, X_test_encoded = encoding_one_hot(\n",
+    "    X_train, X_val, X_test\n",
+    ")"
    ]
   },
   {
@@ -977,7 +982,7 @@
     "deletable": false,
     "nbgrader": {
      "cell_type": "code",
-     "checksum": "b0d2dd9fc9e10e31e99f86e3b3ced9c4",
+     "checksum": "77a05f8a5117bca9d9daf44c9a374d54",
      "grade": false,
      "grade_id": "2-5",
      "locked": false,
@@ -991,16 +996,17 @@
     "import numpy as np\n",
     "from sklearn.linear_model import RidgeCV\n",
     "\n",
+    "\n",
     "def fit_ridge_regression(X_train_encoded, X_val_encoded, y_train, y_val):\n",
     "    ridge = RidgeCV(alphas=np.arange(0.01, 2, 0.01), normalize=True, cv=5)\n",
-    "    mae = float('inf')\n",
+    "    mae = float(\"inf\")\n",
     "    r2 = -1\n",
     "\n",
     "    # YOUR CODE HERE\n",
     "    \n",
     "    \n",
     "    # YOUR CODE ENDS HERE\n",
-    "    \n",
+    "\n",
     "    return ridge, mae, r2"
    ]
   },
@@ -1013,7 +1019,7 @@
     "editable": false,
     "nbgrader": {
      "cell_type": "code",
-     "checksum": "b5e0fd2198c9cda71342b2f9ec95313b",
+     "checksum": "fbdac4428a541a4bb494b5c1cf2c5be2",
      "grade": true,
      "grade_id": "2-5_test",
      "locked": true,
@@ -1026,8 +1032,8 @@
    "outputs": [],
    "source": [
     "ridge, mae, r2 = fit_ridge_regression(X_train_encoded, X_val_encoded, y_train, y_val)\n",
-    "print(f'alpha: {ridge.alpha_}')\n",
-    "print(f'cv best score: {ridge.best_score_}')\n",
+    "print(f\"alpha: {ridge.alpha_}\")\n",
+    "print(f\"cv best score: {ridge.best_score_}\")\n",
     "print(\"Ridge Regression 검증데이터 MAE: \", mae)"
    ]
   },
@@ -1067,7 +1073,7 @@
     "deletable": false,
     "nbgrader": {
      "cell_type": "code",
-     "checksum": "319abbe71c42170c85deaad07bcef1d5",
+     "checksum": "6d1b5b4202931ae66f91fe74fb7f32d1",
      "grade": false,
      "grade_id": "2-6",
      "locked": false,
@@ -1081,12 +1087,12 @@
     "def calculate_score(ridge, X_test_encoded, y_test):\n",
     "    test_mae = 0\n",
     "    test_r2 = 0\n",
-    "    \n",
+    "\n",
     "    # YOUR CODE HERE\n",
     "    \n",
     "    \n",
     "    # YOUR CODE ENDS HERE\n",
-    "    \n",
+    "\n",
     "    return test_mae, test_r2"
    ]
   },
@@ -1123,7 +1129,7 @@
     "editable": false,
     "nbgrader": {
      "cell_type": "code",
-     "checksum": "7274ef5b5384f50b00dd1b2288f5c00f",
+     "checksum": "13acf9f851e7dfa50dac8df5e1a84616",
      "grade": true,
      "grade_id": "challenge_2-6_test",
      "locked": true,
@@ -1135,13 +1141,13 @@
    },
    "outputs": [],
    "source": [
-    "print('test MAE:', test_mae)\n",
-    "print('test R2:', test_r2)"
+    "print(\"test MAE:\", test_mae)\n",
+    "print(\"test R2:\", test_r2)"
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "4a4a05ee",
+   "id": "eee22553",
    "metadata": {},
    "source": [
     "---"
@@ -1149,7 +1155,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "9ce9dbf1",
+   "id": "301358a8",
    "metadata": {},
    "source": [
     "# 수고하셨습니다!"
