--- a/Part1_3.ipynb
+++ b/Part1_3.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "2d1b67b9",
+   "id": "747a20dd",
    "metadata": {},
    "source": [
     "# 확인하세요!\n",
@@ -28,7 +28,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "cd0629e4",
+   "id": "6821f545",
    "metadata": {},
    "source": [
     "---"
@@ -128,7 +128,7 @@
     "editable": false,
     "nbgrader": {
      "cell_type": "code",
-     "checksum": "743d362d5ffa7f2a1c7389693a61c88a",
+     "checksum": "fcd5d0d9358b0d7734f8070a9c07e2e5",
      "grade": false,
      "grade_id": "cell-2602a05446403de0",
      "locked": true,
@@ -139,6 +139,13 @@
    },
    "outputs": [],
    "source": [
+    "# ignore warnings\n",
+    "import xgboost\n",
+    "import warnings\n",
+    "\n",
+    "warnings.filterwarnings(\"ignore\")\n",
+    "xgboost.config.set_config(verbosity=0)\n",
+    "\n",
     "# 데이터셋을 불러오기 위해 판다스 라이브러리를 불러옵니다\n",
     "import pandas as pd\n",
     "\n",
@@ -205,7 +212,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "test['Inspection Fail']"
+    "test[\"Inspection Fail\"]"
    ]
   },
   {
@@ -706,7 +713,7 @@
     "editable": false,
     "nbgrader": {
      "cell_type": "markdown",
-     "checksum": "0e0d383a809b0db08cdfc593eae41616",
+     "checksum": "80b3786a2510c83c22f8ad523e88471a",
      "grade": false,
      "grade_id": "cell-f54c8204c1a466c0",
      "locked": true,
@@ -716,8 +723,9 @@
     }
    },
    "source": [
-    "## 2.2 모델을 생성하고 학습하는 `fit` 함수 및 1일 확률을 반환하는 `predict` 함수를 작성하세요. \n",
+    "## 2.2 모델을 생성하고 학습하는 `fit` 함수와 1일 확률을 반환하는 `predict` 함수를 작성하세요. \n",
     "- Scikit-learn의 `pipeline`을 활용하여 학습 파이프라인을 생성하세요.\n",
+    "- Boosting 모델을 사용하고자 할 경우 XGBoost를 사용하세요.\n",
     "- `RandomizedSearchCV`를 사용해 CV를 진행하세요.\n",
     "    - 적어도 두 개 이상의 하이퍼파라미터에 대해 탐색을 진행하세요.\n",
     "    - auc score을 최대화하는 하이퍼파라미터 조합을 선택하세요.\n",
@@ -732,7 +740,7 @@
     "deletable": false,
     "nbgrader": {
      "cell_type": "code",
-     "checksum": "05f494d80d3cf5b297f22fb17140c3ef",
+     "checksum": "a211d7a12373a64339a18eb89622150f",
      "grade": false,
      "grade_id": "2-2",
      "locked": false,
@@ -755,7 +763,7 @@
     "\n",
     "\n",
     "def fit(X_train, y_train):\n",
-    "    pipeline = None # pipeline = make_pipeline(...)\n",
+    "    pipeline = None  # pipeline = make_pipeline(...)\n",
     "    clf = None  # clf = RandomizedSearchCV(pipeline, ...)\n",
     "\n",
     "    # YOUR CODE HERE\n",
@@ -791,11 +799,11 @@
     "editable": false,
     "nbgrader": {
      "cell_type": "code",
-     "checksum": "c14c25f9ffc7b2f270935f6331034c7f",
+     "checksum": "59ecbc49ee1f571d6d275caf110fdc02",
      "grade": true,
      "grade_id": "2-2_test_code",
      "locked": true,
-     "points": 1,
+     "points": 0,
      "schema_version": 3,
      "solution": false,
      "task": false
@@ -803,7 +811,8 @@
    },
    "outputs": [],
    "source": [
-    "clf = fit(X_train, y_train)"
+    "clf = fit(X_train, y_train)\n",
+    "# ignore graded result for this cell."
    ]
   },
   {
@@ -1202,11 +1211,11 @@
     "editable": false,
     "nbgrader": {
      "cell_type": "code",
-     "checksum": "a5fe42febc266784ab70425ce2fe5bc7",
+     "checksum": "960b1c3de09494cbdab05cf154d33f6f",
      "grade": true,
      "grade_id": "3-2_test_code",
      "locked": true,
-     "points": 0.5,
+     "points": 1,
      "schema_version": 3,
      "solution": false,
      "task": false
@@ -1377,11 +1386,11 @@
     "editable": false,
     "nbgrader": {
      "cell_type": "code",
-     "checksum": "9d75f6f5508615f8abd9116e1785c144",
+     "checksum": "04809c85a8110e63431c9419cdb9e5ea",
      "grade": true,
      "grade_id": "3-3_test_code",
      "locked": true,
-     "points": 0.5,
+     "points": 1,
      "schema_version": 3,
      "solution": false,
      "task": false
@@ -1390,15 +1399,13 @@
    "outputs": [],
    "source": [
     "features = list(map(lambda x: x[0], sorted(p_i, key=lambda x: x[1], reverse=True)))[:2]\n",
-    "pdp_interaction = get_pdp_interaction(\n",
-    "    X_test_preprocessed_df, model, features\n",
-    ")\n",
+    "pdp_interaction = get_pdp_interaction(X_test_preprocessed_df, model, features)\n",
     "pdp_interact_plot(pdp_interaction, feature_names=features, plot_type=\"grid\")"
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "e8950d22",
+   "id": "cae9f0c8",
    "metadata": {},
    "source": [
     "---"
@@ -1406,7 +1413,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "9ccac36c",
+   "id": "8d5d4fab",
    "metadata": {},
    "source": [
     "# 수고하셨습니다!"
